# Neural-Soup-Currency-Prediction

./: .gitignore  bot.py  constants.py  core.py  dataset.py  inference.py  model.py  pyproject.toml  requiements.txt  train.py
data/: load_yf.py  yf_eur_uah_stock_data.csv  yf_usd_uah_stock_data.csv
models/: checkpoint.pth
utils/: plotting.py
